# RAVCARE

./: README.md  index.html  package-lock.json  package.json  queue.html
Patient/: Patient.css  Patient.jsx
src/: App.css  App.jsx  QueueSignals.ts  queue.jsx  queueWindow.jsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: ravcare.db
src-tauri/src/: database.rs  main.rs
src/Components/Dashboard/: Dashboard.css  Dashboard.jsx
src/Components/Dashboard/Comps/BodySection/Home/: home.css  home.jsx
src/Components/Dashboard/Comps/BodySection/Inventory/: Inventory.jsx  inventory.css
src/Components/Dashboard/Comps/BodySection/Patient/: Patient.css  Patient.jsx
src/Components/Dashboard/Comps/BodySection/Scanner/: Scanner.jsx
src/Components/Dashboard/Comps/BodySection/Schedule/: schedule.css  schedule.jsx
src/Components/Dashboard/Comps/SidebarSection/: sidebar.css  sidebar.jsx
src/Components/Login/: Login.jsx
src/Components/Register/: Register.jsx
