[package]
name = "ravcare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ravcare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15" 
once_cell = "1.19.0" # For lazy static initialization of Argon2
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
dotenv = "0.15.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }


